@@ -107,10 +107,8 @@ MSG(COMBAT_MISSS,						"You miss %s.")
 MSG(COMBAT_OUTSIDESHIP,					"You cannot hit characters outside the ship.")
 MSG(COMBAT_PARRY,						"Your attack was parried!")
 MSG(CONT_ITEMS,							" (%d items, %d stones)")
-MSG(CONT_FULL,							"Too many items in that container")
-MSG(CONT_MAGIC,							"The item bounces out of the magic container")
-MSG(CONT_TOOSMALL,						"The container is too small for that")
-MSG(CONT_FULL_WEIGHT,					"This container can't hold more weight.")
+MSG(CONT_FULL_ITEMS,					"That container cannot hold more items.")
+MSG(CONT_FULL_WEIGHT,					"That container cannot hold more weight.")
 MSG(CORPSE_NAME,						"%s of %s")
 MSG(DETECTHIDDEN_SUCC,					"You find %s")
 MSG(DRINK_CANTMOVE,						"You can't move the item.")
@@ -392,6 +390,7 @@ MSG(MSG_EXP_LVLCHANGE_1,				"You have %s some levels")
 MSG(MSG_EXP_LVLCHANGE_GAIN,				"gained")
 MSG(MSG_EXP_LVLCHANGE_LOST,				"lost")
 MSG(MSG_FATIGUE,						"You are too fatigued to move.")
+MSG(MSG_FATIGUE_WEIGHT,					"You are too fatigued to move, because you are carrying too much weight!")
 MSG(MSG_FEET,							"at your feet. It is too heavy.")
 MSG(MSG_FIGURINE_NOTYOURS,				"This figurine is not yours")
 MSG(MSG_FOLLOW_ARROW,					"Follow the Arrow")
@@ -410,7 +409,6 @@ MSG(MSG_FORGIVEN,						"You have been forgiven")
 MSG(MSG_FROZEN,							"You are frozen and cannot move.")
 MSG(MSG_GUARDS,							"Guards can now be called on you!")
 MSG(MSG_GUARDS_NOLONGER,				"Guards can no longer be called on you.")
-MSG(MSG_HEAVY,							"That is too heavy. You can't move that.")
 MSG(MSG_HUNGER,							"You are %s")
 MSG(MSG_ITEMPLACE,						"You put the %s %s.")
 MSG(MSG_JAILED,							"You have been jailed")
@@ -459,7 +457,6 @@ MSG(MSG_NOTO_CHANGE_8,					"huge amounts of")
 MSG(MSG_NOTO_CHANGE_GAIN,				"gained")
 MSG(MSG_NOTO_CHANGE_LOST,				"lost")
 MSG(MSG_NOTO_GETTITLE,					"You are now %s")
-MSG(MSG_OVERLOAD,						"You are too overloaded to move.")
 MSG(MSG_PUSH,							"You shove %s out of the way.")
 MSG(MSG_REGION_ENTER,					"You have entered %s")
 MSG(MSG_REGION_GUARD_ART,				"the town")
